<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.muelpatmore.week1assignment.CreateCustomerActivity"
    tools:layout_editor_absoluteY="25dp">


    <View
        android:id="@+id/vLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="52dp"
        android:background="#FFF"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="384dp"
        android:layout_height="503dp"
        app:layout_constraintTop_toBottomOf="@+id/vLine2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1500dp"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"
                tools:context="com.muelpatmore.week1assignment.CreateCustomerActivity">


                <EditText
                    android:id="@+id/etForname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/mForename"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnPhoto" />

                <EditText
                    android:id="@+id/etSurname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/mSurname"
                    app:layout_constraintEnd_toEndOf="@+id/etForname"
                    app:layout_constraintStart_toStartOf="@+id/etForname"
                    app:layout_constraintTop_toBottomOf="@+id/etForname" />

                <EditText
                    android:id="@+id/etDOB"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="date"
                    android:text="@string/dOB"
                    app:layout_constraintEnd_toStartOf="@+id/btnDate"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="@+id/etSurname"
                    app:layout_constraintTop_toBottomOf="@+id/etSurname" />

                <Button
                    android:id="@+id/btnDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="clickHandler"
                    android:text="@string/datePicker"
                    app:layout_constraintEnd_toEndOf="@+id/etSurname"
                    app:layout_constraintTop_toBottomOf="@+id/etSurname" />

                <Spinner
                    android:id="@+id/spNationality"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="16dp"
                    android:prompt="@string/nationality"
                    android:spinnerMode="dialog"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="@+id/etDOB"
                    app:layout_constraintStart_toStartOf="@+id/etDOB"
                    app:layout_constraintTop_toBottomOf="@+id/etDOB" />

                <TextView
                    android:id="@+id/tvGender"
                    style="@style/AppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/museo_sans_300"
                    android:padding="4sp"
                    android:text="@string/gender"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/spNationality"
                    app:layout_constraintTop_toBottomOf="@+id/spNationality" />

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.441"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvGender">

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="0.75"
                        android:scaleY="0.75"
                        android:text="@string/female"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/rbMale"
                        style="@style/RadioButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/rbOcelot"
                        style="@style/RadioButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ocelot"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/rbNotOcelot"
                        style="@style/RadioButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/notAnOcelot"
                        android:textSize="12sp" />

                </RadioGroup>


                <ImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:onClick="clickHandler"
                    android:text="@string/submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etAddress" />

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="@+id/rgGender"
                    app:layout_constraintStart_toStartOf="@+id/tvGender"
                    app:layout_constraintTop_toBottomOf="@+id/rgGender" />

                <Button
                    android:id="@+id/btnPhoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:onClick="clickHandler"
                    android:text="@string/addPhoto"
                    app:layout_constraintEnd_toEndOf="@+id/ivPhoto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/create_account"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/vLine2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
