<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/descPhoto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/defaultName"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPhoto"
                app:layout_constraintTop_toTopOf="@+id/ivPhoto" />

            <TextView
                android:id="@+id/tvDob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/defaultDob"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvGender"
                app:layout_constraintTop_toTopOf="@+id/tvGender" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginTop="8dp"
                android:text="@string/defaultAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ivPhoto"
                app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />

            <TextView
                android:id="@+id/tvNationality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/defaultNationality"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvGender"
                app:layout_constraintTop_toBottomOf="@+id/tvDob" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/defaultGender"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toStartOf="@+id/tvDob"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ivPhoto"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>