<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fontFamily="@font/museo_sans_300"
    android:background="@color/colorBackground"
    tools:context="com.muelpatmore.week1assignment.CreateCustomerActivity">

    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/create_account"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toTopOf="@+id/ivBack"
        app:layout_constraintVertical_bias="0.432" />

    <ImageView
        android:id="@+id/ivBack"
        android:contentDescription="Back navigation button"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_chevron_left" />

    <View
        android:id="@+id/vBorder1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="48dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/emailAddress"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_90x"
        app:layout_constraintStart_toStartOf="@+id/guideline_10x"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/museo_sans_300"
        android:inputType="textPersonName"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/username"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_90x"
        app:layout_constraintStart_toStartOf="@+id/guideline_10x"
        app:layout_constraintTop_toBottomOf="@+id/vBorder1" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/museo_sans_300"
        android:inputType="textPersonName"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvPassword1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/password1"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etPassword1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/museo_sans_300"
        android:hint="@string/passwordHint"
        android:inputType="textPersonName"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/tvPassword1"
        app:layout_constraintStart_toStartOf="@+id/tvPassword1"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword1" />

    <TextView
        android:id="@+id/tvPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/password2"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/etPassword1"
        app:layout_constraintStart_toStartOf="@+id/etPassword1"
        app:layout_constraintTop_toBottomOf="@+id/etPassword1" />

    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/museo_sans_300"
        android:hint=""
        android:inputType="textPersonName"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/tvPassword2"
        app:layout_constraintStart_toStartOf="@+id/tvPassword2"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword2" />

    <Button
        android:id="@+id/btnSplashLogin"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museo_sans_500"
        android:onClick="clickHandler"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_10x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_90x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/tvPasswordFormat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/passwordCriteria"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSplashLogin"
        app:layout_constraintEnd_toEndOf="@+id/etPassword2"
        app:layout_constraintStart_toStartOf="@+id/etPassword2"
        app:layout_constraintTop_toBottomOf="@+id/etPassword2" />

</android.support.constraint.ConstraintLayout>
